removed public references to Cantabular
