# contract/area_types.go
@@ -4,7 +4,7 @@ import "github.com/ONSdigital/dp-cantabular-dimension-api/model"
 
 // GetAreaTypesRequest defines the schema for the GET /area-types query parameter
 type GetAreaTypesRequest struct {
-	CantabularDataset string `schema:"cantabular_dataset"`
+	Dataset string `schema:"dataset"`
 }
 
 // GetAreaTypesResponse is the response object for GET /area-types
